[package]
name = "distributed-topic-tracker-exp"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = "0.10"
anyhow = "1"
z32 = "1.3"
hmac = "0.12"
primitive-types = "0.13"

secp256k1 = { version = "0.31.1", features = ["rand", "hashes"] }
curve25519-dalek = { version = "4.1.3" }
ed25519-dalek = { version = "2.2.0" }
ed25519-dalek-hpke = { version = "0.0.4" }

tokio = { version = "1.46.1", features = ["full","sync"] }
iroh = { version = "0.90.0" }
iroh-gossip = { version = "0.90.0" }
futures = "0.3.31"

chrono = "0.4"

mainline = "5.4.0"
rand = "0.8"